--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemon": "^2.0.14",
-    "web-push": "^3.4.5"
-  },
-  "devDependencies": {
+    "web-push": "^3.4.5",
     "cors": "^2.8.5"
   }
 }
