--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^6.0.12",
     "nodemon": "^2.0.14",
-    "web-push": "^3.4.5",
-    "cors": "^2.8.5"
+    "web-push": "^3.4.5"
   }
 }
